--- a/tv.html
+++ b/tv.html
@@ -157,6 +157,17 @@
                     <p>Name ist Programm ig.</p>
                 </div>
             </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta57.jpg" alt="Chicago Med">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Drama, Krankenhausserie</p>
+                    <h2>Inhalt</h2>
+                    <p>Im Krankenhaus Chicago Med treffen verschiedene Charaktere aufeinander. Dabei werden nicht nur medizinische Notfälle behandelt, sondern auch Beziehungsprobleme und andere Dramen bewältigt.</p>
+                    <h2>Notes</h2>
+                    <p>Typische Krankenhausserie.</p>
+                </div>
+            </div>
         </div>
 
         <!-- Cat HORROR -->
@@ -741,6 +752,17 @@
                         auszuführen und die Polizei in die Irre zu führen.</p>
                     <h2>Notes</h2>
                     <p>Sehr gut, aber nur bis Staffel 4.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta56.jpg" alt="Squid Game">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Thriller, Survival, Horror, Action, Mystery, Drama</p>
+                    <h2>Inhalt</h2>
+                    <p>Die Teilnehmer konkurrieren in Spielen um einen Geldpreis, aber die Einsätze sind tödlich.</p>
+                    <h2>Notes</h2>
+                    <p>Das war mal was anderes.</p>
                 </div>
             </div>
             <div class="column" tabindex="0">
