--- a/tv.html
+++ b/tv.html
@@ -740,7 +740,7 @@
 
         <!-- Cat Thriller -->
         <h1 id="thriller" class="cat">Thriller</h1>
-        <div class="row triple">
+        <div class="row">
             <div class="column" tabindex="0">
                 <img src="images/TV/Insta51.jpg" alt="Haus des Geldes">
                 <div class="focus-content">
