--- a/tv.html
+++ b/tv.html
@@ -238,6 +238,30 @@
                 </div>
             </div>
             <div class="column" tabindex="0">
+                <img src="images/TV/Insta39.jpg" alt="Ratched">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Horror, Thriller</p>
+                    <h2>Inhalt</h2>
+                    <p>Die Krankenschwester Mildred Ratched fängt im Jahr 1947 ihren neuen Job als Krankenpflegerin in
+                        einer psychiatrischen Klinik an. Unter der makellosen Fassade der Krankenschwester lauert
+                        allerdings ein ziemliches Monster.</p>
+                    <h2>Notes</h2>
+                    <p>Sarah Paulson ist iconic.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta58.jpg" alt="Penny Dreadful">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Horror, Drama, Thriller</p>
+                    <h2>Inhalt</h2>
+                    <p>`Penny Dreadful' entführt ins London der 1880er Jahre. Das wird von diversen, aus der Horrorliteratur bekannten Figuren, wie z. B. Dr. Frankenstein, Dorian Gray und Dracula, unsicher gemacht.</p>
+                    <h2>Notes</h2>
+                    <p>Ich wusste die Hälfte der Zeit nicht was abgeht, aber es ist echt cool.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
                 <img src="images/TV/Insta40.jpg" alt="The Walking Dead">
                 <div class="focus-content">
                     <h2>Genres</h2>
@@ -254,16 +278,14 @@
                 </div>
             </div>
             <div class="column" tabindex="0">
-                <img src="images/TV/Insta39.jpg" alt="Ratched">
+                <img src="images/TV/Insta59.jpg" alt="Slasher">
                 <div class="focus-content">
                     <h2>Genres</h2>
-                    <p>Horror, Thriller</p>
+                    <p>Horror, Slasher, Thriller</p>
                     <h2>Inhalt</h2>
-                    <p>Die Krankenschwester Mildred Ratched fängt im Jahr 1947 ihren neuen Job als Krankenpflegerin in
-                        einer psychiatrischen Klinik an. Unter der makellosen Fassade der Krankenschwester lauert
-                        allerdings ein ziemliches Monster.</p>
+                    <p>Als Sarah Bennett noch ein Kind war, wurden ihre Eltern ermordet. Viele Jahre später kehrt sie mit ihrem Ehemann in ihre Geburtsstadt zurück. Kurz darauf beginnt eine Mordserie. Hilfe erhält Sarah von dem inhaftierten Mörder ihrer Eltern.</p>
                     <h2>Notes</h2>
-                    <p>Sarah Paulson ist iconic.</p>
+                    <p>Solide.</p>
                 </div>
             </div>
         </div>
