--- a/tv.html
+++ b/tv.html
@@ -258,7 +258,7 @@
                     <h2>Inhalt</h2>
                     <p>`Penny Dreadful' entführt ins London der 1880er Jahre. Das wird von diversen, aus der Horrorliteratur bekannten Figuren, wie z. B. Dr. Frankenstein, Dorian Gray und Dracula, unsicher gemacht.</p>
                     <h2>Notes</h2>
-                    <p>Ich wusste die Hälfte der Zeit nicht was abgeht, aber es ist echt cool.</p>
+                    <p>Wusste die Hälfte der Zeit nicht was abgeht, aber es ist echt cool.</p>
                 </div>
             </div>
             <div class="column" tabindex="0">
@@ -281,7 +281,7 @@
                 <img src="images/TV/Insta59.jpg" alt="Slasher">
                 <div class="focus-content">
                     <h2>Genres</h2>
-                    <p>Horror, Slasher, Thriller</p>
+                    <p>Horror, Slasher, Thriller, Anthologie</p>
                     <h2>Inhalt</h2>
                     <p>Als Sarah Bennett noch ein Kind war, wurden ihre Eltern ermordet. Viele Jahre später kehrt sie mit ihrem Ehemann in ihre Geburtsstadt zurück. Kurz darauf beginnt eine Mordserie. Hilfe erhält Sarah von dem inhaftierten Mörder ihrer Eltern.</p>
                     <h2>Notes</h2>
