--- a/tv.html
+++ b/tv.html
@@ -38,6 +38,7 @@
         <li><a href="#crime">Crime</a></li>
         <li><a href="#thriller">Thriller</a></li>
         <li><a href="#mystery">Mystery</a></li>
+        <li><a href="#trash">Good Trash</a></li>
     </ul>
 
     <div class="container">
@@ -167,7 +168,9 @@
                     <h2>Genres</h2>
                     <p>Drama, Krankenhausserie</p>
                     <h2>Inhalt</h2>
-                    <p>Im Krankenhaus Chicago Med treffen verschiedene Charaktere aufeinander. Dabei werden nicht nur medizinische Notfälle behandelt, sondern auch Beziehungsprobleme und andere Dramen bewältigt.</p>
+                    <p>Im Krankenhaus Chicago Med treffen verschiedene Charaktere aufeinander. Dabei werden nicht nur
+                        medizinische Notfälle behandelt, sondern auch Beziehungsprobleme und andere Dramen bewältigt.
+                    </p>
                     <h2>Notes</h2>
                     <p>Typische Krankenhausserie.</p>
                 </div>
@@ -256,7 +259,9 @@
                     <h2>Genres</h2>
                     <p>Horror, Drama, Thriller</p>
                     <h2>Inhalt</h2>
-                    <p>`Penny Dreadful' entführt ins London der 1880er Jahre. Das wird von diversen, aus der Horrorliteratur bekannten Figuren, wie z. B. Dr. Frankenstein, Dorian Gray und Dracula, unsicher gemacht.</p>
+                    <p>`Penny Dreadful' entführt ins London der 1880er Jahre. Das wird von diversen, aus der
+                        Horrorliteratur bekannten Figuren, wie z. B. Dr. Frankenstein, Dorian Gray und Dracula, unsicher
+                        gemacht.</p>
                     <h2>Notes</h2>
                     <p>Wusste die Hälfte der Zeit nicht was abgeht, aber es ist echt cool.</p>
                 </div>
@@ -283,7 +288,9 @@
                     <h2>Genres</h2>
                     <p>Horror, Slasher, Thriller, Anthologie</p>
                     <h2>Inhalt</h2>
-                    <p>Als Sarah Bennett noch ein Kind war, wurden ihre Eltern ermordet. Viele Jahre später kehrt sie mit ihrem Ehemann in ihre Geburtsstadt zurück. Kurz darauf beginnt eine Mordserie. Hilfe erhält Sarah von dem inhaftierten Mörder ihrer Eltern.</p>
+                    <p>Als Sarah Bennett noch ein Kind war, wurden ihre Eltern ermordet. Viele Jahre später kehrt sie
+                        mit ihrem Ehemann in ihre Geburtsstadt zurück. Kurz darauf beginnt eine Mordserie. Hilfe erhält
+                        Sarah von dem inhaftierten Mörder ihrer Eltern.</p>
                     <h2>Notes</h2>
                     <p>Solide.</p>
                 </div>
@@ -762,6 +769,45 @@
                     <p>Jede Folge ist gleich, aber trotzdem ein Banger since forever.</p>
                 </div>
             </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta65.jpg" alt="Law and Order">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Crime, Drama, Gericht</p>
+                    <h2>Inhalt</h2>
+                    <p>
+                        Vertreter der Polizei und der Staatsanwaltschaft klären Kriminalverbrechen in und um New York auf. Mit allen zur Verfügung stehenden Mitteln versuchen die Ermittler dabei, den oder die Straftäter zur Verantwortung zu ziehen.
+                    </p>
+                    <h2>Notes</h2>
+                    <p>Theme Song slappt.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta66.jpg" alt="Law and Order SVU">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Crime, Drama, Gericht</p>
+                    <h2>Inhalt</h2>
+                    <p>
+                        Im 16. Bezirk New Yorks kümmert sich die Polizeieinheit Special Victim Unit um ganz besonders schreckliche Verbrechen. Die Einheit beschäftigt sich hauptsächlich mit Verbrechen wie Vergewaltigungen, häusliche Gewalt, Kindesmissbrauch oder Entführungen. Detective Elliot Stabler, Olivia Benson und John Munch leiten das Team.
+                    </p>
+                    <h2>Notes</h2>
+                    <p>Classic.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta67.jpg" alt="The Mentalist">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Crime, Drama, Mystery, Action, Thriller</p>
+                    <h2>Inhalt</h2>
+                    <p>
+                        Patrick Jane ist ein TV-Star und vermeintlicher Zauberer. Er gibt vor, mit Geistern kommunizieren zu können. Doch nachdem der Verbrecher Red John seine Frau und seine Tochter ermordert, hängt er die Karriere als Mentalist an den Nagel. Nach einigen Jahren in der geschlossenen Anstalt beschließt Jane, den Mörder seiner Familie zur Strecke zu bringen. Dafür arbeitet er als Berater des California Bureau of Investigation.
+                    </p>
+                    <h2>Notes</h2>
+                    <p>Slay.</p>
+                </div>
+            </div>
         </div>
 
         <!-- Cat Thriller -->
@@ -820,7 +866,7 @@
 
         <!-- Cat Mystery -->
         <h1 id="mystery" class="cat">Mystery</h1>
-        <div class="row triple">
+        <div class="row pair">
             <div class="column" tabindex="0">
                 <img src="images/TV/Insta29.jpg" alt="Stranger Things">
                 <div class="focus-content">
@@ -847,6 +893,11 @@
                     <p>Gute Mystery-Serie. LGBTQ Representation.</p>
                 </div>
             </div>
+        </div>
+
+        <!-- Cat Trash -->
+        <h1 id="trash" class="cat">Good Trash</h1>
+        <div class="row">
             <div class="column" tabindex="0">
                 <img src="images/TV/Insta55.jpg" alt="The A List">
                 <div class="focus-content">
@@ -860,7 +911,67 @@
                         Girl Protagonist?</p>
                 </div>
             </div>
-
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta61.jpg" alt="Shadowhunters">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Fantasy, Drama, Action, Horror</p>
+                    <h2>Inhalt</h2>
+                    <p>An ihrem 18. Geburtstag entdeckt Clary Fray, bisher ein normaler Teenager, dass sie ein Shadowhunter ist, ein Hybrid aus Mensch und Engel, der Dämonen bekämpfen soll. Als ihre Mutter entführt wird, gerät Clary in eine ihr unbekannte Welt: Zusammen mit dem erfahrenen Shadowhunter Jace Wayland und ihrem besten Freund Simon versucht sie, ihr Schicksal zu erfüllen und ihre Mutter zu finden.
+                    </p>
+                    <h2>Notes</h2>
+                    <p>Nur gut wegen Malec.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta60.jpg" alt="Merlin">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Abenteuer, Drama, Fantasy, Medieval Fantasy, Action</p>
+                    <h2>Inhalt</h2>
+                    <p>Es handelt sich um die Geschichte von König Artus und seinem Zauberer Merlin, die beide in jungen Jahren darum kämpften, ihr Schicksal zu verstehen. In dieser Erzählung ist Prinz Arthur bekannt dafür, der Thronfolger zu sein.
+                    </p>
+                    <h2>Notes</h2>
+                    <p>So funny for no reason.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta62.jpg" alt="Nowhere Boys">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Drama, Abenteuer, Fantasy, Action</p>
+                    <h2>Inhalt</h2>
+                    <p>Die Teenager Jake, Felix, Andy und Sam verlaufen sich während eines Schulausflugs in einem Nationalpark. Als sie ihren Weg zurück in die Stadt finden, stellen sie fest, dass sie in einer rätselhaften Parallelwelt gefangen sind.
+                    </p>
+                    <h2>Notes</h2>
+                    <p>Forged Friends Trope.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta63.jpg" alt="The bureau of magical things">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Fantasy, Drama</p>
+                    <h2>Inhalt</h2>
+                    <p>Die 16-jährige Kyra führt ein normales Teenager-Leben, bis sie durch einen Zauber in eine Fee verwandelt wird. Sie wird freundlich von der Feengemeinschaft aufgenommen. Doch schon bald muss sie sich behaupten und gegen eine Widersacherin wehren.
+                    </p>
+                    <h2>Notes</h2>
+                    <p>Das ist legit für kids aber slay.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta64.jpg" alt="The Chilling Adventures of Sabrina">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Fantasy, Drama, Mystery, Horror</p>
+                    <h2>Inhalt</h2>
+                    <p>
+                        Sabrina muss lernen, mit den zwei Seiten ihres Wesens, halb Hexe und halb sterblicher Mensch, zurechtzukommen. Zugleich könnte sie die einzige Rettung gegen düstere Kräfte sein, die ihre Familie und letztendlich die gesamte Menschheit bedrohen.
+                    </p>
+                    <h2>Notes</h2>
+                    <p>Ka warum ich alles gesehen habe.</p>
+                </div>
+            </div>
         </div>
 
     </div>
