--- a/tv.html
+++ b/tv.html
@@ -30,6 +30,7 @@
 
     <ul class="cats">
         <li><a href="#drama">Drama</a></li>
+        <li><a href="#romance">Romance</a></li>
         <li><a href="#horror">Horror</a></li>
         <li><a href="#fantasy">Fantasy</a></li>
         <li><a href="#scifi">Science Fiction</a></li>
@@ -47,18 +48,6 @@
         <h1 id="drama" class="cat">Drama</h1>
         <div class="row">
             <div class="column" tabindex="0">
-                <img src="images/TV/Insta4.jpg" alt="Bridgerton">
-                <div class="focus-content">
-                    <h2>Genres</h2>
-                    <p>Drama, Regency Romance, Historic</p>
-                    <h2>Inhalt</h2>
-                    <p>Während der Ballsaison im Jahr 1813 in der Londoner High Society versuchen die acht Geschwister
-                        der Familie Bridgerton die Liebe zu finden.</p>
-                    <h2>Notes</h2>
-                    <p>Warum ist das so addictive?</p>
-                </div>
-            </div>
-            <div class="column" tabindex="0">
                 <img src="images/TV/Insta17.jpg" alt="Fleabag">
                 <div class="focus-content">
                     <h2>Genres</h2>
@@ -69,32 +58,6 @@
                         stößt in London aber manchmal auf Grenzen.</p>
                     <h2>Notes</h2>
                     <p>Men don't understand this.</p>
-                </div>
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/TV/Insta20.jpg" alt="Young Royals">
-                <div class="focus-content">
-                    <h2>Genres</h2>
-                    <p>Drama, Romance</p>
-                    <h2>Inhalt</h2>
-                    <p>Nach einer Schlägerei wird der junge Prinz Wilhelm von Schweden auf das renommierte und
-                        prestigeträchtige Internat Hillerska geschickt, um ihn fernab der Öffentlichkeit auf seine
-                        zukünftige Rolle als schwedischer Monarch vorzubereiten.</p>
-                    <h2>Notes</h2>
-                    <p>Wille in seiner Revenge Era.</p>
-                </div>
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/TV/Insta21.jpg" alt="Heartstopper">
-                <div class="focus-content">
-                    <h2>Genres</h2>
-                    <p>Drama, Romance</p>
-                    <h2>Inhalt</h2>
-                    <p>Charlie und Nick sind beste Freunde. An einem Tag stellen sie fest, dass ihre ungewöhnliche
-                        Freundschaft etwas mehr sein könnte. Gleichzeitig widmen sich die beiden Jugendlichen ihrem
-                        Schulalltag und dem Prozess der Selbstfindung.</p>
-                    <h2>Notes</h2>
-                    <p>Stopped my heart. Fun Fact: Wenn man Heartstopper googelt kommt ein easter egg!</p>
                 </div>
             </div>
             <div class="column" tabindex="0">
@@ -121,19 +84,6 @@
                         er, in der Schule Sexualtherapiestunden anzubieten.</p>
                     <h2>Notes</h2>
                     <p>No regrets. Überraschend gut.</p>
-                </div>
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/TV/Insta22.jpg" alt="Love 101">
-                <div class="focus-content">
-                    <h2>Genres</h2>
-                    <p>Drama, Romance</p>
-                    <h2>Inhalt</h2>
-                    <p>Eine Gruppe Jugendlicher will ihre Lehrerin daran hindern, die Stadt zu verlassen. Dabei
-                        unterstützen die ausgestoßenen Kinder ihre geliebte Lehrerin dabei, ihre Liebe zu finden und
-                        ihren Mut zu finden, sie selbst zu sein.</p>
-                    <h2>Notes</h2>
-                    <p>Hidden gem. GEM. Fire-forged friends trope.</p>
                 </div>
             </div>
             <div class="column" tabindex="0">
@@ -173,6 +123,62 @@
                     </p>
                     <h2>Notes</h2>
                     <p>Typische Krankenhausserie.</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Cat DRAMA -->
+        <h1 id="romance" class="cat">Romance</h1>
+        <div class="row">
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta4.jpg" alt="Bridgerton">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Drama, Regency Romance, Historic</p>
+                    <h2>Inhalt</h2>
+                    <p>Während der Ballsaison im Jahr 1813 in der Londoner High Society versuchen die acht Geschwister
+                        der Familie Bridgerton die Liebe zu finden.</p>
+                    <h2>Notes</h2>
+                    <p>Warum ist das so addictive?</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta20.jpg" alt="Young Royals">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Drama, Romance</p>
+                    <h2>Inhalt</h2>
+                    <p>Nach einer Schlägerei wird der junge Prinz Wilhelm von Schweden auf das renommierte und
+                        prestigeträchtige Internat Hillerska geschickt, um ihn fernab der Öffentlichkeit auf seine
+                        zukünftige Rolle als schwedischer Monarch vorzubereiten.</p>
+                    <h2>Notes</h2>
+                    <p>Wille in seiner Revenge Era.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta21.jpg" alt="Heartstopper">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Drama, Romance</p>
+                    <h2>Inhalt</h2>
+                    <p>Charlie und Nick sind beste Freunde. An einem Tag stellen sie fest, dass ihre ungewöhnliche
+                        Freundschaft etwas mehr sein könnte. Gleichzeitig widmen sich die beiden Jugendlichen ihrem
+                        Schulalltag und dem Prozess der Selbstfindung.</p>
+                    <h2>Notes</h2>
+                    <p>Stopped my heart. Fun Fact: Wenn man Heartstopper googelt kommt ein easter egg!</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta22.jpg" alt="Love 101">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Drama, Romance</p>
+                    <h2>Inhalt</h2>
+                    <p>Eine Gruppe Jugendlicher will ihre Lehrerin daran hindern, die Stadt zu verlassen. Dabei
+                        unterstützen die ausgestoßenen Kinder ihre geliebte Lehrerin dabei, ihre Liebe zu finden und
+                        ihren Mut zu finden, sie selbst zu sein.</p>
+                    <h2>Notes</h2>
+                    <p>Hidden gem. GEM. Fire-forged friends trope.</p>
                 </div>
             </div>
         </div>
