--- a/tv.html
+++ b/tv.html
@@ -30,7 +30,7 @@
 
     <ul class="cats">
         <li><a href="#drama">Drama</a></li>
-        <li><a href="#romance">Romance</a></li>
+        <li><a href="#romancecoa">Romance / Comign of Age</a></li>
         <li><a href="#horror">Horror</a></li>
         <li><a href="#fantasy">Fantasy</a></li>
         <li><a href="#scifi">Science Fiction</a></li>
@@ -71,19 +71,6 @@
                         erobern. Jedoch kämpft sie mit einem Suchtproblem.</p>
                     <h2>Notes</h2>
                     <p>Masterpiece.</p>
-                </div>
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/TV/Insta31.jpg" alt="Sex Education">
-                <div class="focus-content">
-                    <h2>Genres</h2>
-                    <p>Drama, Coming of Age, Comedy</p>
-                    <h2>Inhalt</h2>
-                    <p>Der 16-jährige Otis ist der Sohn einer bekannten Sexualtherapeutin, hat selbst aber noch nicht
-                        viele Erfahrungen sammeln können. Zusammen mit seiner rebellischen Mitschülerin Maeve beginnt
-                        er, in der Schule Sexualtherapiestunden anzubieten.</p>
-                    <h2>Notes</h2>
-                    <p>No regrets. Überraschend gut.</p>
                 </div>
             </div>
             <div class="column" tabindex="0">
@@ -128,7 +115,7 @@
         </div>
 
         <!-- Cat DRAMA -->
-        <h1 id="romance" class="cat">Romance</h1>
+        <h1 id="romancecoa" class="cat">Romance / Coming of Age</h1>
         <div class="row">
             <div class="column" tabindex="0">
                 <img src="images/TV/Insta4.jpg" alt="Bridgerton">
@@ -179,6 +166,19 @@
                         ihren Mut zu finden, sie selbst zu sein.</p>
                     <h2>Notes</h2>
                     <p>Hidden gem. GEM. Fire-forged friends trope.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta31.jpg" alt="Sex Education">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Drama, Coming of Age, Comedy</p>
+                    <h2>Inhalt</h2>
+                    <p>Der 16-jährige Otis ist der Sohn einer bekannten Sexualtherapeutin, hat selbst aber noch nicht
+                        viele Erfahrungen sammeln können. Zusammen mit seiner rebellischen Mitschülerin Maeve beginnt
+                        er, in der Schule Sexualtherapiestunden anzubieten.</p>
+                    <h2>Notes</h2>
+                    <p>No regrets.</p>
                 </div>
             </div>
         </div>
