--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="text">
             <h1>Mein Scrapbook</h1>
-            <p>Ich dokumentiere hier Dinge, die ich mag. That's all.</p>
+            <p>Ich dokumentiere hier Stuff, den ich mag. That's all.</p>
         </div>
     </div>
 </body>
